--- a/css/style.css
+++ b/css/style.css
@@ -1,163 +1,302 @@
-body {
-    background-color: #1e1e1e;
+@font-face {
+    font-family: kanit;
+    src: url(../Kanit1/Kanit-Regular.ttf);
+}
+
+@font-face {
+    font-family: kanitBold;
+    src: url(../Kanit1/Kanit-Bold.ttf);
+}
+
+:root {
+    --rosa: #D5238E
+}
+
+* {
     color: white;
-    font-family: 'Segoe UI', sans-serif;
-    font-size: 1.3rem;
-  }
+    font-size: 1rem;
+    font-family: kanit;
+}
 
-  h2{
-    font-weight: bold;
-  }
+img {
+    max-width: 90%;
+}
 
-  .logo {
-    width: 11vw;
-  }
+.title {
+    font-family: kanitBold;
+}
 
-  .navbar {
-    border-radius: 0px 0px 18px 18px;
-  }
+.txt-justify {
+    text-align: justify;
+}
 
-  .container {
-    height: 85vh;
-    margin-top: 2vh;
-  }
-
-  .nav-link {
-    color: white;
-  }
-
-  .nav-link.active, .nav-link:hover {
-    color: #d5238e !important;
-  }
-
-  .divider {
-    width: 200px;
-    height: 5px; 
-    background-color: #D5238E; 
-    border-radius: 4px;
-  }
-
-  .hero {
+.txt-center {
     text-align: center;
-    background-color: #1e1e1e;
-    padding: 80px 20px;
+}
+
+.bg1 {
+    background-color: rgb(59, 59, 59);
+}
+
+.bg2 {
+    background-color: rgb(36, 36, 36);
+}
+
+section {
+    padding: 7%;
+    margin: auto;
+    text-align: center;
+    height: auto;
+    justify-content: center;
+    padding: 40px;
+}
+
+.line {
+    height: 0.5vh;
+    width: 35vw;
+    margin: auto;
+    margin-top: -2px;
+    margin-bottom: 3vh;
+    border-radius: 15px;
+    background-color: var(--rosa);
+}
+
+#navbar {
+    background-color: #1c1c1c;
+    position: fixed;
+    width: 100vw;
+    border-radius: 0px 0px 15px 15px;
+    box-shadow: 0px 0px 3px 2px var(--rosa);
+    z-index: 1;
+}
+
+#nav-bar {
+    color: var(--rosa);
+    background-color: #1b1b1b;
+}
+
+#nav-icon {
+    width: 200px;
+    margin-left: 20%;
+}
+
+#x {
+    width: 57vw;
+    height: 2px;
+}
+
+#nav-link {
+    margin-right: 20px;
+    font-size: 23px;
+    color: white;
+    border-radius: 30px;
+}
+
+#nav-link:hover {
+    background-color: var(--rosa);
+    border-radius: 30px;
+}
+
+/* HOME */
+#home {
     background-repeat: no-repeat;
     background-position: bottom right;
-    background-size: 65%;
-  }
+    background-size: 100%;
+    align-content: center;
+    height: 100vh;
+}
 
-  .logo-home {
-    width: 50%;
-  }
-
-  .hero h1 {
-    font-weight: bold;
-    font-size: 2.5rem;
-    line-height: 1.3;
-  }
-
-  .section-icons {
-    background-color: #2b2b2b;
-    padding: 30px 10px;
-    min-height: 90vh; /* altura mínima opcional pra dar espaço */
-    display: flex;
-    align-items: center;
-  }
-  
-  .section-icons .container {
-    width: 100%;
-  }
-  
-  .section-icons .row {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .section-icons .icon-box {
+.content-home {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-items: center;
+}
+
+/* REDIRECT */
+.redirect {
+    display: flex;
+    flex-direction: column;
+}
+
+.center {
+    padding: 5%;
+    margin: 0px 35px 0px 35px;
     text-align: center;
-    padding: 20px;
-    color: white;
-  }
-  
-  .icon {
-    font-size: 8vw !important;
-    color: #d5238e;
-    margin-bottom: 15px;
-  }
-  
+}
 
-  .section {
-    padding: 70px;
+.icon {
+    color: var(--rosa);
+    font-size: 9vw;
+}
+
+/* SOBRE NÓS */
+
+.content {
+    display: flex;
+    flex-direction: column;
+    padding: 10%;
+    align-items: center;
+    width: 90%;
+    margin: auto;
+}
+
+.line2 {
+    height: 0.5vh;
+    width: 47vw;
+    margin: auto;
+    border-radius: 15px;
+    background-color: var(--rosa);
+}
+
+/* INTEGRANTES */
+.photo {
+    width: 23vw;
+    margin-bottom: 3vh;
+}
+
+/* PROJETO */
+#project {
+    width: 25vw;
+}
+
+.grid {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
-  }
+    gap: 1.5rem;
+    /* espaçamento entre os blocos */
+}
 
-  .sobre-nos h2 {
-    font-weight: bold;
-    color: white;
-  }
-
-  .image {
-    max-width: 20vw;
-  }
-
-  body {
-    background-color: #111;
-    color: #fff;
-    font-family: 'Segoe UI', sans-serif;
-  }
-  
-  .footer {
+/* FOOTER */
+.footer {
     background-color: #111;
     padding: 40px 20px;
     text-align: center;
-  }
-  
-  .logo-img {
+}
+
+.logo-img {
     width: 40px;
     margin-bottom: 5px;
-  }
-  
-  .logo-text {
+}
+
+.logo-text {
     font-size: 1.5rem;
     font-weight: bold;
-  }
-  
-  .contact-text {
+}
+
+.contact-text {
     font-size: 1.1rem;
-  }
-  
-  .divider-ft {
+}
+
+.divider-ft {
     height: 60px;
     width: 2px;
-    background-color: #e6007e;
-  }
-  
-  .icon-text {
+    background-color: var(--rosa);
+}
+
+.icon-text {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 8px;
     margin: 10px 0;
     font-size: 1rem;
-  }
-  
-  .icon-text i {
+}
+
+.icon-text i {
     font-size: 1.2rem;
-  }
-  
-  .footer .copyright {
+}
+
+.footer .copyright {
     margin-top: 30px;
     color: #aaa;
     font-size: 0.9rem;
-  }
+}
 
-#txt{
-  text-align: justify;
-  
+/* A PARTIR DE TELAS PEQUENAS (TABLETS) */
+@media only screen and (min-width: 480px) {
+    .content-home {
+        flex-direction: row;
+        margin: 0%;
+        gap: 6rem;
+    }
+
+    #space {
+        text-align: left;
+    }
+
+    .content-home h1 {
+        line-height: 3.5rem;
+    }
+
+    .content-home picture {
+        width: 50vw;
+    }
+
+    .line2 {
+        height: 20vh;
+        width: 1vw;
+        margin: auto;
+        border-radius: 15px;
+        background-color: var(--rosa);
+    }
+
+    .content {
+        flex-direction: row;
+        width: 100%;
+    }
+
+
+}
+
+/* A PARTIR DE TELAS MÉDIAS (NOTEBOOKS E DESKTOPS */
+@media only screen and (min-width: 750px) {
+    section {
+        padding: 10vh 15vw;
+    }
+
+    .redirect {
+        flex-direction: row;
+    }
+
+    .center {
+        margin: 0px;
+    }
+
+    .line {
+        width: 15vw;
+    }
+
+    .line2 {
+        max-width: 5px;
+    }
+
+    * {
+        font-size: 1.1rem;
+    }
+
+    .photo {
+        width: 13vw;
+    }
+
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        align-items: center;
+        gap: 3.5rem;
+    }
+
+    /* imagens menores e proporcionais */
+    #project {
+        justify-content: center;
+        width: 100%;
+        max-width: 300px;
+        padding: 20px 10px;
+    }
+
+    .home {
+        background-size: 60%;
+    }
 }
